fix alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,7 @@ body {
 .linkit {
   color: rgb(255, 69, 0)!important;
   font-family: 'Varela Round', sans-serif!important;
+  padding-left: 20px;
 }
 
 .fa-dollar-sign {
